Tue Aug 19 14:20:09 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* rr.c (rrip_work) [SL]: Component length field does not include
	the two header bytes, so add an extra two in advancing the pointer
	past the component.

Thu Aug  7 16:01:29 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* inode.c (read_disknode): Units of st_blocks are 512 byte chunks,
	not logical_block_size chunks.

1997-07-22  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (dir): Is isofs, not ufs.

Mon Jul 21 16:00:04 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (LCLHDRS): Remove susp.h.